--- a/style.css
+++ b/style.css
@@ -268,3 +268,19 @@ footer{
         height: 350px;
         }
     }
+    @media(max-width: 530px){
+        .logo-container {
+            width: 30%;
+        }
+        .menu-container {
+            width: 70%;
+        }
+        .description {
+            width: 300px;
+            font-size: 20px;
+        }
+    @media(max-width: 300px){
+        .description{
+            width: 200px;
+        }
+            }
