--- a/style.css
+++ b/style.css
@@ -132,6 +132,7 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1;
 }
 .bottom {
     width: 100%;
@@ -276,9 +277,13 @@ footer{
             width: 70%;
         }
         .description {
-            width: 300px;
-            font-size: 20px;
+            width: 280px;
+            font-size: 16px;
         }
+        .bottom {
+            top: 50%
+        }
+
     @media(max-width: 300px){
         .description{
             width: 200px;
