--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ header{
     height: 170vh;
     display: flex;
     position: relative;
+    margin-bottom: 30px;
 }
 .left {
     width: 30%;
@@ -202,8 +203,110 @@ header{
     margin-right: 100px;
     border-radius: 50%;
 }
+/* Contact */
+.contact-bgtop {
+    background-color: #fbb544;
+    height: 383px;
+    width: 100%;
+}
+.contact-bottom {
+    background-color: #fff;
+    height:80vh;
+    width: 100%
+}
+ .image-contact {
+    background-image: url(img/person.jpg);
+    width: 881px;
+    height: 624px;
+    position: relative;
+    bottom: 300px;
+    left: 500px;
+} 
 
+/* Form */
+.contact-container{
+    display: flex;
+    flex-direction: unset;
+    flex-wrap: wrap;
+    
+}
 
+.contact-form {
+    background-color: #000;
+    color: #fff;
+    width: 514px;
+    height: 570px;
+    padding: 30px 50px 30px 40px;
+    margin-left: 21%;
+    margin-top: -430px;
+    z-index: 98;
+
+    box-shadow: 5px 5px 20px 0 rgb(0 0 0 / 40%);
+}
+.contact-form h3 {
+text-transform: uppercase;
+letter-spacing: 2px;
+font-weight: 600;
+margin: 0 0 28px 10px;
+font-size: 32px;
+}
+.contact-form input, textarea {
+    padding: 10px 12px;
+    display: block;
+    width: 100%;
+    height: auto;
+    margin-bottom: 28px;
+}
+.contact-form textarea {
+    height: 200px;
+}
+.contact-form button {
+    
+    padding: 15px 40px;
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: 700;
+    background-color: transparent;
+    color: #fff;
+    border: 2px solid #fff;
+    transition: all 0.4s;
+}
+.contact-form button:hover {
+    background-color: #fff;
+    color: #000;
+    cursor: pointer;
+}
+/* Description */
+
+.contact-description {
+    margin-top: -250px;
+    margin-left: 30px;
+
+}
+.contact-description h3 {
+    font-size: 32px;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+.contact-description p {
+    width: 500px;
+    font-size: 20px;
+    line-height: 25px;
+    letter-spacing: 2px;
+    margin-bottom: 25px;
+}
+.contact-description button {
+    font-size: 16px;
+    text-transform: lowercase;
+    letter-spacing: 2px;
+    padding-bottom: 5px;
+    background-color: transparent;
+    color: #000;
+    border-color: #000;
+    border-style: none none solid;
+    transition: all 0.4s;
+}
 /* Footer */
 footer{
     width: 100%;
@@ -243,14 +346,36 @@ footer{
     }
 
 }
+@media(max-width: 1430px){
+    .image-contact {
+        width: 550px;
+        height: 550px;
+        background-position: center;
+        left: 30%
+    }
+
+
+}
+@media(max-width: 1340px){
+    .contact-bottom{
+        height: 100vh;
+    }
+    .content-description {
+        margin-top: 0px!important;
+        margin-left: 10px!important;
+        position: relative!important;
+    }
+}
+
 @media(max-width: 1200px){
     .image-suit, .image-wallet {
         width: 300px;
-    height: 300px;
+        height: 300px;
     }
     .description {
         margin-right: 0px; 
     }
+    
 }
 @media(max-width: 950px){
         .top, .bottom {
@@ -268,8 +393,13 @@ footer{
         }
         .image-suit, .image-wallet {
             width: 350px;
-        height: 350px;
-        margin: 0;
+            height: 350px;
+            margin: 0;
+        }
+        .image-contact {
+            left: 10%;
+            width: 500px;
+            height: 500px;
         }
     }
     @media(max-width: 530px){
@@ -284,7 +414,17 @@ footer{
             font-size: 16px;
         }
         .bottom {
-            top: 50%
+            top: 50%;
+        }
+        .image-contact {
+            left: 5%;
+            width: 450px;
+            height: 450px;
+            background-repeat: no-repeat;
+            overflow: hidden;
+        }
+        .contact-form {
+            margin-left: 0%;
         }
 
     @media(max-width: 432px){
